--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,11 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
+*{ 
+  margin:0;
+  padding:0; 
+  box-sizing: border-box;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -30,4 +35,19 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+/* @font-face{ 
+  font-family:"burtons";
+  src:url("../public/Burtons.otf")
+} */
+
+.btn{ 
+padding: 10px 20px; 
+color: white; 
+border:none; 
+border-radius: 5px; 
+font-weight: bold; 
+cursor:pointer ;
+background-color:teal;
 }
